fixed header image and spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7216,7 +7216,7 @@ input, select, textarea {
 /* Wrapper (style1) */
 
 	.wrapper.style1 > .inner {
-		padding: 4rem 3.5rem 5rem 3.5rem ;
+		padding: 2rem 3.5rem 5rem 3.5rem ;
 		margin: 0 auto;
 		max-width: 100%;
 		width: 64rem;
@@ -7233,7 +7233,7 @@ input, select, textarea {
 	@media screen and (max-width: 1680px) {
 
 		.wrapper.style1 > .inner {
-			padding: 4rem 2.5rem 3rem 2.5rem ;
+			padding: 2rem 2.5rem 3rem 2.5rem ;
 		}
 
 	}
@@ -7241,7 +7241,7 @@ input, select, textarea {
 	@media screen and (max-width: 1280px) {
 
 		.wrapper.style1 > .inner {
-			padding: 4rem 4rem 2rem 4rem ;
+			padding: 2rem 4rem 2rem 4rem ;
 		}
 
 	}
@@ -7249,7 +7249,7 @@ input, select, textarea {
 	@media screen and (max-width: 980px) {
 
 		.wrapper.style1 > .inner {
-			padding: 4rem 3rem 2.5rem 3rem ;
+			padding: 2rem 3rem 2.5rem 3rem ;
 		}
 
 	}
@@ -7257,7 +7257,7 @@ input, select, textarea {
 	@media screen and (max-width: 736px) {
 
 		.wrapper.style1 > .inner {
-			padding: 3rem 2rem 1rem 2rem ;
+			padding: 2rem 2rem 1rem 2rem ;
 		}
 
 	}
